# MusicBand

./: BandsmanBase.h  CMakeLists.txt  Duett.h  Guitar.h  GuitarPlayer.h  MusicBandBase.h  MusicalInstrumentBase.h  MusicalPart.h  Trumpet.h  TrumpetPlayer.h  main.cpp
